New theme, INdT introduction.

--- a/docs/presentations/pt-br/pyconbrasil-2007/apresentacao.tex
+++ b/docs/presentations/pt-br/pyconbrasil-2007/apresentacao.tex
@@ -136,6 +136,101 @@
     \tableofcontents[subsectionstyle=show/shaded/hide,sectionstyle=show/hide]
   }}
 
+\section{Apresentação}
+\subsection{Pessoal}
+
+\begin{frame}
+\frametitle{Gustavo Sverzut Barbieri}
+
+\begin{itemize}
+  \item Programador desde os 9 anos (1991).
+  \item Desenvolvedor de Software Livre desde 1999.
+  \item Usuário da linguagem Python desde 2002.
+  \item Pesquisador do Instituto Nokia de Tecnologia (INdT).
+  \item Equipe de Conceito.
+\end{itemize}
+\end{frame}
+
+\subsection{Instituto Nokia de Tecnologia --- INdT}
+
+\begin{frame}
+\frametitle{Sobre o INdT}
+
+\vspace{-0.5cm}\hspace{4.80cm}\pgfimage[interpolate=true,width=5.8cm]{indt-places}
+
+
+\vspace{-6.4cm}
+\begin{itemize}
+  \item Instituição sem fins lucrativos.
+  \item Fundado pela Nokia em Outubro de 2001.
+  \item Três escritórios:
+    \begin{itemize}
+      \item Manaus
+      \item Recife
+      \item Brasília
+    \end{itemize}
+    \item \url{http://www.indt.org.br/}
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}
+\frametitle{Estrutura}
+
+\hspace{-0.4cm}
+\begin{minipage}{5cm}
+  \begin{itemize}
+  \item Cerca de 150 funcionários.
+  \item Quatro áreas técnicas:
+    \begin{itemize}
+    \item Open Source
+    \item \emph{Future Solutions VAS}
+    \item Logística
+    \item Mecânica
+    \end{itemize}
+  \end{itemize}
+\end{minipage}
+\begin{minipage}{5.8cm}
+\begin{flushright}
+  \vspace{-1cm}
+  \textbf{Parceiros:}\vspace{0.05cm}
+
+  {\color[rgb]{0.5,0.5,0.5}
+    \hrule
+  }
+  \vspace{0.2cm}
+
+\pgfimage[height=0.5cm]{partner-calce}~
+\pgfimage[height=0.5cm]{partner-universal}
+\vspace{0.2cm}
+
+\pgfimage[height=0.6cm]{partner-dresden}~
+\pgfimage[height=0.6cm]{partner-tum}~~
+\pgfimage[height=0.6cm]{partner-uta}
+\vspace{0.2cm}
+
+\pgfimage[height=0.8cm]{partner-helsink}
+
+\pgfimage[height=0.6cm]{partner-tampere}
+\vspace{0.2cm}
+
+\pgfimage[height=0.6cm]{partner-inatel}~
+\pgfimage[height=0.6cm]{partner-cesar}~
+\pgfimage[height=0.6cm]{partner-lnls}
+\vspace{0.2cm}
+
+\pgfimage[height=1cm]{partner-fucapi}~
+\pgfimage[height=1cm]{partner-ufam}~
+\pgfimage[height=1cm]{partner-ufmg}
+\vspace{0.2cm}
+
+\pgfimage[height=1cm]{partner-ufrj}~
+\pgfimage[height=1cm]{partner-usp}~
+\pgfimage[height=1cm]{partner-ufcg}
+\end{flushright}
+\end{minipage}
+\end{frame}
+
 
 \section{Introdução}
 \subsection{O que é Eagle}
